# causalrust

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  PRD.md  README.md  STATE.md  TASK.md
.github/workflows/: ci.yml
causalrust/: Cargo.toml  EXPERIMENTS.md  README.md
causalrust/bindings/mcp/: Cargo.toml
causalrust/bindings/mcp/src/: main.rs
causalrust/bindings/pyo3/: Cargo.toml
causalrust/bindings/pyo3/src/: lib.rs
causalrust/crates/cynepic-bayes/: Cargo.toml
causalrust/crates/cynepic-bayes/src/: belief.rs  lib.rs  priors.rs  sampler.rs  streaming.rs  tool_belief.rs
causalrust/crates/cynepic-causal/: Cargo.toml
causalrust/crates/cynepic-causal/src/: counterfactual.rs  dag.rs  dsep.rs  identify.rs  lib.rs  refute.rs
causalrust/crates/cynepic-causal/src/estimate/: iv.rs  linear.rs  mod.rs  propensity.rs
causalrust/crates/cynepic-core/: Cargo.toml
causalrust/crates/cynepic-core/src/: domain.rs  engine.rs  epistemic.rs  error.rs  lib.rs  policy.rs
causalrust/crates/cynepic-graph/: Cargo.toml
causalrust/crates/cynepic-graph/src/: checkpoint.rs  graph.rs  hooks.rs  lib.rs  node.rs
causalrust/crates/cynepic-guardian/: Cargo.toml
causalrust/crates/cynepic-guardian/src/: audit.rs  bias_audit.rs  circuit_breaker.rs  hitl.rs  lib.rs  loop_detector.rs  policy.rs  rate_limiter.rs  risk.rs
causalrust/crates/cynepic-router/: Cargo.toml
causalrust/crates/cynepic-router/src/: budget.rs  classifier.rs  config.rs  drift.rs  eval.rs  lib.rs  router.rs
causalrust/crates/cynepic-server/: Cargo.toml
causalrust/crates/cynepic-server/src/: main.rs
causalrust/docs/: CRATE_GUIDE.md  PITCH.md  WORKFLOWS.md  architecture.md  integration.md  roadmap.md
