[workspace]
resolver = "2"
members = [
    "crates/cynepic-core",
    "crates/cynepic-guardian",
    "crates/cynepic-router",
    "crates/cynepic-causal",
    "crates/cynepic-bayes",
    "crates/cynepic-graph",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Elja Placido"]
license = "BSL-1.1"
license-file = "../LICENSE"
repository = "https://github.com/eljaplacido/causalrust"
rust-version = "1.85"

[workspace.dependencies]
# Shared across workspace
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"

# cynepic-core (re-exported by all crates)
cynepic-core = { path = "crates/cynepic-core" }

# cynepic-guardian
regorus = "0.5"

# cynepic-causal
petgraph = "0.7"
ndarray = "0.16"
polars = { version = "0.46", features = ["lazy", "csv", "json"] }

# cynepic-bayes
statrs = "0.18"
rand = "0.9"
rand_distr = "0.5"

# cynepic-router
axum = "0.8"

# cynepic-graph
async-openai = "0.27"

# Testing
approx = "0.5"
