[package]
name = "cynepic-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) JSON-RPC stdio server exposing cynepic-rs cognitive tools"

[[bin]]
name = "cynepic-mcp"
path = "src/main.rs"

[dependencies]
cynepic-core = { path = "../../crates/cynepic-core" }
cynepic-router = { path = "../../crates/cynepic-router" }
cynepic-causal = { path = "../../crates/cynepic-causal" }
cynepic-bayes = { path = "../../crates/cynepic-bayes" }
cynepic-guardian = { path = "../../crates/cynepic-guardian", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
