[package]
name = "cynepic-pyo3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PyO3 bindings for cynepic-rs — high-performance CARF/CYNEPIC from Python"

[lib]
name = "cynepic"
crate-type = ["cdylib"]

[dependencies]
cynepic-core = { path = "../../crates/cynepic-core" }
cynepic-guardian = { path = "../../crates/cynepic-guardian", default-features = false }
cynepic-causal = { path = "../../crates/cynepic-causal" }
cynepic-bayes = { path = "../../crates/cynepic-bayes" }
cynepic-router = { path = "../../crates/cynepic-router" }
cynepic-graph = { path = "../../crates/cynepic-graph" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
