[package]
name = "cynepic-guardian"
description = "AI policy guardrails: Rego + Cedar policy evaluation, circuit-breaker, and audit trail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cynepic-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
regorus = { workspace = true, optional = true }

[features]
default = ["rego"]
rego = ["dep:regorus"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
